Closed Bug 160158 Opened 23 years ago Closed 23 years ago

Popup Menu won't select proper item

Categories

(Camino Graveyard :: HTML Form Controls, defect)

PowerPC
macOS
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: CompWX, Assigned: bryner)

References

()

Details

(Keywords: testcase)

Attachments

(2 files, 1 obsolete file)

Using Chimera 0.4 Milestone on MacOS X 10.1.5 The "Select Your State" Popup menu on the above link does not allow you to select any state but alabma. Reproduceable: always Steps to Reproduce: 1. go to http://help.rr.com/rrwho.asp 2. selet "Time Warner" in the "Select Your Provider" Popup menu 3. selet any state except Alabama in the "Select Your State" Popup menu
Sorry, trackpad slip there's more expected result: State is selected Actual Result: Alabama is selected
neat, are there any other sites that exhibit the problem? Is is a visual glitch only (does the right state get submitted)?
Assignee: saari → pinkerton
Blocks: 147975
This does not appear to be simply a visual glitch because if you notice the third popup menu only has birmingham (a city in alabama) as a choice.
form controls -> bryner
Assignee: pinkerton → bryner
Confirmed using Chimera/20020724. Though it works using FizzillaCFM/2002072203, JavaScript errors ("list.click is not a function") are generated when the SELECTs are changed. Adding qawanted for testcase minimization.
Keywords: qawanted
Attached file minimized testcase (obsolete) —
zappiabj@muohio.edu, thanks for minimizing the HTML. However, the JavaScript still needs minimization, and it still generates an error I mentioned in comment 5. (It's still possible that if that error is fixed, the whole things works, you understand.)
Attached file Javascript Minimized
Attachment #93658 - Attachment is obsolete: true
Keywords: qawantedtestcase
Would bug #160538 be a dup of this bug? See http://bugzilla.mozilla.org/show_bug.cgi?id=160538#c10 for my reasoning
QA Contact: winnie → sairuh
Attached patch patchSplinter Review
Don't use the content id as an identifier for option elements, since it's always 0 for dynamically inserted elements (and I understand that it will be removed soon anyway). Just stuff the content pointer into the menu item tag.
checked in.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
went thru the url and test cases here, and this looks fixed using 2002.08.28.05.
Status: RESOLVED → VERIFIED
Component: Toolbars & Menus → HTML Form Controls
*** Bug 160538 has been marked as a duplicate of this bug. ***
No longer blocks: 147975
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: