Bug 160158 - select popup won't select correct item.  Change the code to not use the content ID as a unique identifier for option elements since it's always 0 for dynamically inserted options.  Instead, just stuff the content pointer into the menu item tag.  r=pink.